add link to v8.5.3 announcement

--- a/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
+++ b/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
@@ -1,6 +1,6 @@
 # FAQ Desk: v8.5.3 Macros and Run-Menu Commands
 
-Hello, and welcome to the FAQ Desk. You have likely come looking for information or have been directed here to find out more about the v8.5.3 changes to Macros and Run-Menu commands.
+Hello, and welcome to the FAQ Desk. You have likely come looking for information or have been directed here to find out more about the [v8.5.3 changes](/topic/24462/notepad-v8-5-3-release) to Macros and Run-Menu commands.
 
 Notepad++ v8.5.3 changed how it interprets the Macros and Run-Menu commands in `shortcuts.xml` (found in the `<Macros>` and `<UserDefinedCommands>` sections).
 
