Add link to a HelpWanted topic

--- a/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
+++ b/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
@@ -39,3 +39,7 @@ To make that same macro work right in v8.5.3, you would have to edit it to be
             <Action type="1" message="2170" wParam="0" lParam="0" sParam="σ" />
         </Macro>
 ```
+
+### I need help fixing my macro despite the example
+
+If you still need help on how to fix your existing macros after reading this FAQ, you can post in the ["HELP: Having trouble with Macros in v8.5.3 or later" topic](https://community.notepad-plus-plus.org/topic/24477/help-having-trouble-with-macros-in-v8-5-3-or-later).  Please make sure you have at least tried to follow the advice here, and explain what you tried, and why you think it didn't work.  If discussions there show that this FAQ is inadequate, we will try to improve the FAQ.
