add in Alt+Numeric and Character Panel and charmap

--- a/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
+++ b/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
@@ -18,7 +18,14 @@ When Notepad++ v8.5.3 (or newer) reads a `shortcuts.xml` that was created with v
 
 To edit your macros and run-menu commands, follow the User Manual's advice on [Editing Configuration Files](https://npp-user-manual.org/docs/config-files/#editing-configuration-files), and open `%AppData%\Notepad++\shortcuts.xml` (assuming a standard [Config Files Location](https://npp-user-manual.org/docs/config-files/#configuration-files-location)) and also look at `%AppData%\Notepad++\shortcuts.xml.v8.5.2.backup` for comparing to the old version of your macros.  Anyplace there is an `&#x03C0;`-style entity in the `shortcuts.xml`, you will want to replace it with the actual character it refers to. 
 
-For doing the translation: Inside Notepad++, you can select the specific entity -- in this example, `&#x03C0;` -- then use `Ctrl+H` or **Search > Replace** to bring up the replacement dialog; the `&#x03C0;` will normally now be populated in the **Find what:** expression; set **Replace with:** to `\x{03C0}`, make sure **Search mode** is set to **Regular Expression**, and run **Replace All**.  (Unfortunately, you have to do that manually for every entity; you cannot put a capture group in the **Find what** and then refer to that group-number inside the `\x{...}` in the **Replace with**, as convenient as that would be.)  Alternately, you can search the internet for entity-to-character tables; the author of this FAQ frequently uses [fileformat.info's unicode search](https://www.fileformat.info/info/unicode/char/search.htm?preview=entity), where you can just paste in the entity and it will link you to the actual character.  
+For doing the translation, there are multiple choices for entering characters that aren't easily typed on your keyboard:
+- Inside Notepad++, you can select the specific entity -- in this example, `&#x03C0;` -- then use `Ctrl+H` or **Search > Replace** to bring up the replacement dialog; the `&#x03C0;` will normally now be populated in the **Find what:** expression; set **Replace with:** to `\x{03C0}`, make sure **Search mode** is set to **Regular Expression**, and run **Replace All**.  (Unfortunately, you have to do that manually for every entity; you cannot put a capture group in the **Find what** and then refer to that group-number inside the `\x{...}` in the **Replace with**, as convenient as that would be.)  Alternately, you can search the internet for entity-to-character tables; the author of this FAQ frequently uses [fileformat.info's unicode search](https://www.fileformat.info/info/unicode/char/search.htm?preview=entity), where you can just paste in the entity and it will link you to the actual character.
+  - For macros where you recorded typing a newline (hitting ENTER on your keyboard), it would have been recorded as an individual `&#x000D;` and `&#x000A;`.  The two replacements below will convet those to individual CR and LF characters to make up the newline:
+      - FIND WHAT = `&#x000D;` and REPLACE WITH = `\x{000D}`
+      - FIND WHAT = `&#x000A;` and REPLACE WITH = `\x{000A}`
+- When in Windows (CR LF) line ending mode, you cannot easily type a single CR or a single LF; to get those individual characters, if you don't want to use the search-and-replace , you can use the Windows-standard `Alt`+numeric-keypad sequence: holding down `Alt` key while typing `0` then `1` then `3` on your numeric keypad, then letting go of `Alt`, will insert a lone CR (regardless of your file's line-ending) and holding down `Alt` and typing `0` then `1` then `0` on your numeric keypad, then letting go of `Alt`, will insert the lone LF.  
+- Notepad++'s **Edit**-menu [**Character Panel**](https://npp-user-manual.org/docs/editing/#character-panel) feature will allow you to insert characters -- whether the lone CR or LF, or one of the others from the ANSI character list shown in the Character Panel
+- You can also run Windows' **Character Map** app using Notepad++'s **Run > Run...** with a command of `charmap.exe` , which will allow you to put one or more character into the clipboard, then paste them into the appropriate attribute in your `shortcuts.xml`
 
 ### Example
 
