--- a/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
+++ b/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
@@ -20,7 +20,7 @@ To edit your macros and run-menu commands, follow the User Manual's advice on [E
 
 For doing the translation, there are multiple choices for entering characters that aren't easily typed on your keyboard:
 - Inside Notepad++, you can select the specific entity -- in this example, `&#x03C0;` -- then use `Ctrl+H` or **Search > Replace** to bring up the replacement dialog; the `&#x03C0;` will normally now be populated in the **Find what:** expression; set **Replace with:** to `\x{03C0}`, make sure **Search mode** is set to **Regular Expression**, and run **Replace All**.  (Unfortunately, you have to do that manually for every entity; you cannot put a capture group in the **Find what** and then refer to that group-number inside the `\x{...}` in the **Replace with**, as convenient as that would be.)  Alternately, you can search the internet for entity-to-character tables; the author of this FAQ frequently uses [fileformat.info's unicode search](https://www.fileformat.info/info/unicode/char/search.htm?preview=entity), where you can just paste in the entity and it will link you to the actual character.
-  - For macros where you recorded typing a newline (hitting ENTER on your keyboard), it would have been recorded as an individual `&#x000D;` and `&#x000A;`.  The three replacements below will convet those to individual CR and LF characters to make up the newline:
+  - For macros where you recorded typing a newline (hitting ENTER on your keyboard), it would have been recorded as an individual `&#x000D;` and `&#x000A;`.  The three replacements below will convert those to individual CR and LF characters to make up the newline:
       - FIND WHAT = `&#x000D;&#x000A;` and REPLACE WITH = `\x{000D}\x{000D}\x{000A}`
         - The doubling of the `\x{000D}` is necessary because of a [bug](https://github.com/notepad-plus-plus/notepad-plus-plus/issues/13717) in the v8.5.3 implementation
       - FIND WHAT = `&#x000D;` and REPLACE WITH = `\x{000D}`
