--- a/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
+++ b/CommunityForum/FAQ/v8.5.3 Macros and Run-Menu Commands.md
@@ -17,7 +17,7 @@ This change in interpretation may make it so your old macros or run-menu command
 **2023-July-05 update**: There are still a small number of entities that _will_ be recognized inside macros, even in v8.5.3 and newer:
 
 * The 5 predefined XML named-entities: `&amp; &lt; &gt; &apos; &quot;`
-* Any of the hexadecimal entities that only include two hex digits, like `&#x0D;` and `&#x0A;` for `CR` and `LF`, and `&#x22;` for double-quotes.  This notation works for all ASCII codepoints from 1 (`&#x01'` for the `SOH` character) through 127 (`&#x7F;` for the `DEL` character)
+* Any of the hexadecimal entities that only include two hex digits, like `&#x0D;` and `&#x0A;` for `CR` and `LF`, and `&#x22;` for double-quotes.  This notation works for all ASCII codepoints from 1 (`&#x01;` for the `SOH` character) through 127 (`&#x7F;` for the `DEL` character)
 
 ## Updating `shortcuts.xml` from earlier versions to v8.5.3 (or newer) 
 
